<resources>
    <string name="app_name">LazyBTC</string>
    <string name="title_home">News</string>
    <string name="title_dashboard">Quotation</string>
    <string name="more">Add-on</string>
    <string name="star">Collections</string>
    <string name="fast_information">News</string>
    <string name="slogan">Spreading Useful information</string>
    <string name="coming_soon">Coming soon</string>
    <string name="share">Share</string>
    <string name="update">update</string>
    <string name="cancel">cancel</string>
    <string name="download_complete_notify">Download is finished , click the notification panel to install.</string>
    <string name="concern">Concerning</string>
    <string name="settings">Settings</string>
    <string name="push_message">Push notification</string>
    <string name="auto_update">Auto update.</string>
    <string name="comment">Give a star on GooglePlay</string>
    <string name="no_market_app">PlayStore is not installed on this device.</string>
    <string name="demo_name">BTC</string>
    <string name="demo_price_unit">/usdt</string>
    <string name="search">Search</string>
    <string name="sort">sort</string>
    <string name="top">Top</string>
    <string name="collection">Collection</string>
    <string name="review_all">See more</string>
    <string name="market">Quotation</string>
    <string name="all_market">All</string>
    <string name="coin_name">Coin symbol</string>
    <string name="current_price_usdt">Price/USDT</string>
    <string name="change_volume">change rate</string>
    <string name="format_update_items">Updated %d items</string>
    <string name="used_amount">Current Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="office_sites">Official Website</string>
    <string name="block_sites">Block Browser</string>
    <string name="white_paper">White Paper</string>
    <string name="coin_detail">Coin Overview</string>
    <string name="error_data">Data Error</string>
    <string name="introduction">Introduction</string>
    <string name="market_cap">Total Market Value</string>
    <string name="market_cap_usd">Total Market Value(USD)</string>
    <string name="max_amount">Total Supply</string>
    <string name="email">Email:</string>
    <string name="no_email_client_and_copy_to_clipboard">No email client found , copied to the clipboard.</string>
    <string name="websiteAddress">WebSite:</string>
    <string name="version_code">Version Code:</string>
    <string name="auto_update_on_go">Already Downloading</string>
    <string name="already_new_version">Already Latest Version</string>
    <string name="already_enqueued">Already enqueued</string>
    <string name="data_updated">Data updated</string>
    <string name="coin_symbol">Coin Symbol</string>
    <string name="refresh">Refresh</string>
    <string name="coin_collection">Collected Coin</string>
    <string name="link">Link</string>
    <string name="refresh_success">Refresh Success</string>
    <string name="no_browser_client_and_copy_to_clipboard">No Internet Explorer Found , Copied to the clipboard .</string>
    <string name="friendly_link">Other Link</string>
    <string name="collected_link">Collected Link</string>
    <string name="save">Save</string>
    <string name="link_name_hint">WebSite Name</string>
    <string name="link_url_hint">Website url(Starts with http/https)</string>
    <string name="url_none_empty">Please input url</string>
    <string name="url_invalidate">Valid url</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_rate">Update rate</string>
    <string name="two_second">2 minutes</string>
    <string name="five_second">5 minutes</string>
    <string name="ten_second">10 minutes</string>
    <string name="fiveteen_second">15 minutes</string>
    <string name="url_exist">Url Existing</string>
    <string name="notification_not">Get Notification At First Timing.</string>
    <string name="update_not">No Cellular Data Will Spend</string>
    <string name="bz_share">【BiZhiShare】 </string>
    <string name="share_app">Thank you for sharing</string>
    <string name="share_text">币知：区块链爱好者业余时间制作，纯绿色的一款币圈资讯、行情浏览应用，欢迎到Play商店下载使用。</string>
    <string name="assert_title">Assets</string>
    <string name="assert_group">Asset Group</string>
    <string name="coin_information">Basic Information</string>
    <string name="select_coin">Select Coin</string>
    <string name="amount">Amount</string>
    <string name="create_assert">Create Asset</string>
    <string name="price_when_bought">Cost Price</string>
    <string name="total_price">Total Price</string>
    <string name="bought_date">Bought Date</string>
    <string name="label">Group</string>
    <string name="default_label">Default Group</string>
    <string name="remark">Note</string>
    <string name="coin_note_hint">Optional(200 words limited)</string>
    <string name="USDT">USDT</string>
    <string name="ETH">ETH</string>
    <string name="BTC">BTC</string>
    <string name="unit_price">Unit Price</string>
    <string name="select_label">Select Group</string>
    <string name="input_coin_name">Input Coin Symbol</string>
    <string name="create_label">Create Group</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="login_account_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="capture_code">Capture Code</string>
    <string name="login_email">Login With Email</string>
    <string name="telephone">Telephone Number</string>
    <string name="login_phone">Login with Phone Number</string>
    <string name="complete_infor">Please accomplish information</string>
    <string name="account_notice">The first login we will create an account, please log in with your email address, so that you can get your account back later.</string>
    <string name="illegal_email">Please input a reasonable email address.</string>
    <string name="logout_success">Logged out</string>
    <string name="no_assert">No Asset</string>
    <string name="data_error">Data error,please retry.</string>
    <string name="input_unit_price">Input the corresponding price</string>
    <string name="total_assert">total assets</string>
    <string name="complete_assert_information">Please accomplish assets information.</string>
    <string name="select_group_first">Select a group.</string>
    <string name="login_register">Login(Sign up)</string>
    <string name="collect">Collect</string>
    <string name="language_setting">Select Language</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="auto">Automatic</string>
</resources>
