<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/scroll"
        android:icon="@drawable/ic_vertical_align_top_black_24dp"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/top"/>
    <item android:id="@+id/star"
        android:icon="@drawable/ic_star_black_24dp"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/collection"/>

    <item android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:visible="true"
        app:showAsAction ="ifRoom"
        android:checked="false"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView" />


    <item android:id="@+id/coin_collection"
        android:icon="@drawable/ic_star_black_24dp"
        app:showAsAction ="ifRoom"
        android:checked="false"
        android:title="@string/coin_collection"/>
</menu>