<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="match_parent">
    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@mipmap/launcher_icon" android:layout_gravity="center_horizontal" android:layout_marginTop="40dp" android:contentDescription="@string/app_name" />
    <TextView android:id="@+id/email" android:layout_height="wrap_content" android:layout_width="match_parent" android:textSize="14sp" android:text="@string/email" android:layout_marginTop="20dp" android:gravity="center"/>
    <TextView android:id="@+id/website" android:layout_height="wrap_content" android:layout_width="match_parent" android:textSize="14sp" android:text="@string/websiteAddress" android:layout_marginTop="20dp" android:gravity="center"/>
    <TextView android:id="@+id/version" android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center_horizontal" android:layout_marginTop="20dp" android:text="@string/version_code"/>
</LinearLayout>