<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="30dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/account_editor"
            style="@style/TextViewNormal"
            android:layout_width="match_parent"
            android:hint="@string/login_account_hint"
         />
        <TextView
            android:id="@+id/text_area"
            style="@style/TextViewNormal"
            android:layout_gravity="center_vertical"
            android:width="40dp"
            android:visibility="gone"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="+86" />
        <TextView
            android:id="@+id/area_code"
            style="@style/TextViewNormal"
            android:visibility="gone"
            android:layout_gravity="right|center_vertical"
            android:padding="5dp"
            android:text="@string/capture_code" />
    </FrameLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/psd_editor"
        style="@style/TextViewNormal"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_btn"
        style="@style/TextViewNormal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/save_bg"
        android:gravity="center"
        android:text="@string/login_register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/switch_email"
        style="@style/TextViewSmall"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:padding="5dp"
        android:text="@string/login_email" />

    <TextView
        style="@style/TextViewSmall"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:lineSpacingExtra="4dp"
        android:gravity="center_horizontal"
        android:text="@string/account_notice" />
</LinearLayout>