<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:text="@string/coin_name" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_price_usdt"
            android:gravity="center"
            android:padding="3dp" />

        <TextView
            android:id="@+id/change_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_volume"
            android:paddingTop="3dp"
            android:gravity="right"
            android:paddingBottom="3dp"
            android:paddingRight="10dp"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>