<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/common_padding">

        <TextView
            android:id="@+id/concern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:lines="1"
            android:padding="@dimen/common_padding"
            android:text="@string/concern"
            android:textColor="@color/text_normal"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/windowBackground" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:lines="1"
            android:padding="@dimen/common_padding"
            android:text="@string/settings"
            android:textColor="@color/text_normal"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/windowBackground" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:lines="1"
            android:padding="@dimen/common_padding"
            android:text="@string/comment"
            android:textColor="@color/text_normal"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/windowBackground" />

        <LinearLayout
            android:id="@+id/link_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingLeft="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:text="@string/friendly_link"
                android:textColor="@color/text_normal"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>