<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/list_item_muilt_cardboard" />


        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:lineSpacingExtra="3dp"
            android:padding="8dp"
            android:text="这接口对接ask看"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/used_amount" />

            <TextView
                android:id="@+id/used_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:padding="10dp"
                android:textColor="@color/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/total_amount" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:padding="10dp"
                android:textColor="@color/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/office_sites" />

            <TextView
                android:id="@+id/office_sites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:clickable="true"
                android:lineSpacingExtra="8dp"
                android:focusable="true"
                android:padding="10dp"
                android:textColor="@color/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/block_sites" />

            <TextView
                android:id="@+id/block_sites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:lineSpacingExtra="8dp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/white_paper" />

            <TextView
                android:id="@+id/white_paper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:textColor="@color/text_normal"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>